--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -4,7 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    style="@style/Animation.Design.BottomSheetDialog"
     tools:context=".Screens.SearchActivity">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -14,40 +16,48 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:padding="20dp"
-            android:gravity="center_vertical">
+            android:gravity="center_vertical"
+            android:padding="20dp">
+
             <ImageView
                 android:id="@+id/backBtn"
                 android:layout_width="25dp"
                 android:layout_height="25dp"
                 android:src="@drawable/back"
                 android:layout_marginRight="10dp"
-                app:tint="@color/textcolor"
-                />
+                style="@style/Animation.Design.BottomSheetDialog"/>
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Search"
                 android:fontFamily="@font/poppins_bold"
                 android:textSize="28sp"
-                android:textColor="@color/textcolor"
-                android:layout_weight="1"/>
-
+                android:layout_weight="1"
+                android:textColor="@color/textcolor"/>
 
 
         </LinearLayout>
+
         <LinearLayout
             android:id="@+id/searchBtn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:paddingHorizontal="15dp"
-            android:paddingVertical="10dp"
-            android:gravity="center"
+            android:background="@drawable/search_bg"
             android:layout_marginHorizontal="20dp"
-            android:layout_marginTop="-10dp"
+            android:paddingHorizontal="15dp"
+            android:gravity="center"
+            android:layout_marginTop="-5dp"
             android:layout_marginBottom="10dp"
-            android:background="@drawable/search_bg">
+            style="@style/Animation.Design.BottomSheetDialog">
+
+            <ImageView
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:src="@drawable/search"
+                app:tint="#A6A6A6" />
+
             <EditText
                 android:id="@+id/searchEditText"
                 android:layout_width="wrap_content"
@@ -61,17 +71,26 @@
                 android:maxLines="1"
                 android:minLines="1"
                 android:maxLength="30"
-                android:fontFamily="@font/poppins_semibold"
+                android:fontFamily="@font/poppins_bold"
                 style="@style/Animation.Design.BottomSheetDialog"/>
+
             <ImageView
-                android:layout_width="24dp"
-                android:layout_height="24dp"
+                android:id="@+id/clear_text"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:src="@drawable/close"
+                app:tint="#CACACA"
+                android:visibility="gone"
+                android:layout_marginRight="10dp"/>
+
+            <ImageView
+                android:id="@+id/filterBtn"
+                android:layout_width="22dp"
+                android:layout_height="22dp"
                 android:src="@drawable/filter"
                 app:tint="@color/myTheme" />
 
-
         </LinearLayout>
-
 
         <LinearLayout
             android:id="@+id/notifyBar"
@@ -88,7 +107,8 @@
                 android:layout_height="wrap_content"
                 android:text='Result for “'
                 android:fontFamily="@font/poppins_bold"
-                android:textSize="17sp"/>
+                android:textSize="20sp"
+                style="@style/Animation.Design.BottomSheetDialog"/>
             <TextView
                 android:id="@+id/searchedWord"
                 android:layout_width="wrap_content"
@@ -97,14 +117,14 @@
                 android:fontFamily="@font/poppins_bold"
                 android:textColor="@color/myTheme"
                 android:maxLength="20"
-                android:textSize="17sp"/>
+                android:textSize="20sp"/>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text='”'
                 android:fontFamily="@font/poppins_bold"
-                android:textSize="17sp"
-                android:textColor="@color/myThemelight"/>
+                android:textSize="20sp"
+                style="@style/Animation.Design.BottomSheetDialog"/>
 
             <TextView
                 android:id="@+id/totalCount"
@@ -119,6 +139,50 @@
 
         </LinearLayout>
 
+        <LinearLayout
+            android:id="@+id/notfoundContainer"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:orientation="vertical"
+            android:visibility="gone"
+            android:layout_marginHorizontal="20dp"
+            android:gravity="center">
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="220dp"
+                style="@style/Animation.Design.BottomSheetDialog"/>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:gravity="center"
+                android:layout_marginTop="30dp">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Not Found"
+                    android:fontFamily="@font/poppins_bold"
+                    android:textSize="24sp"
+                    style="@style/Animation.Design.BottomSheetDialog"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Sorry, the keyword you entered cannot be found, please check again or search with another keyword."
+                    android:fontFamily="@font/poppins_bold"
+                    android:textAlignment="center"
+                    android:layout_marginTop="10dp"
+                    android:textSize="18sp"
+                    style="@style/Animation.Design.BottomSheetDialog"/>
+
+
+            </LinearLayout>
+
+        </LinearLayout>
 
         <LinearLayout
             android:id="@+id/searchContainer"
@@ -146,10 +210,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Search Products"
-                    android:textColor="@color/textcolor"
                     android:fontFamily="@font/poppins_bold"
                     android:textSize="24sp"
-                    style="@style/Animation.Design.BottomSheetDialog"/>
+                    android:textColor="@color/textcolor"/>
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -166,16 +229,14 @@
 
         </LinearLayout>
 
-
-
         <GridView
-            android:id="@+id/gridview"
+            android:id="@+id/gridView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:horizontalSpacing="10dp"
             android:numColumns="2"
-            android:paddingHorizontal="10dp"
+            android:paddingHorizontal="20dp"
             android:verticalSpacing="10dp"
             android:visibility="gone"
             tools:listitem="@layout/product_listview" />
