--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -1,41 +1,200 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".Screens.Fragments.AccountFragment">
+    android:gravity="center_horizontal"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".Screens.Fragments.AccountFragment"
+    style="@style/screenBgTwo">
 
-   <LinearLayout
-       android:layout_width="match_parent"
-       android:layout_height="wrap_content"
-      android:gravity="center_vertical"
-       android:orientation="horizontal"
-       android:paddingHorizontal="20dp"
-       android:paddingVertical="10dp">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center_vertical">
 
-       <ImageView
-           android:layout_width="50dp"
-           android:layout_height="50dp"
-           android:src="@drawable/logo"/>
-       <TextView
-           android:layout_width="wrap_content"
-           android:layout_height="wrap_content"
-           android:text="My Account"
-           android:fontFamily="@font/poppins_bold"
-           android:textSize="25dp"
-           android:textColor="@color/textcolor"
-           android:layout_weight="1"
-           android:translationX="1dp"/>
-       <ImageView
-           android:layout_width="25dp"
-           android:layout_height="25dp"
-           android:src="@drawable/search"/>
+        <ImageView
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:src="@drawable/logo"/>
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="My Account"
+            android:fontFamily="@font/poppins_semibold"
+            android:textSize="28sp"
+            android:translationX="-5dp"
+            android:layout_weight="1"
+            style="@style/textColor"/>
 
+    </LinearLayout>
 
+    <FrameLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginVertical="10dp">
 
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/profileimage"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
+            android:layout_centerVertical="true"
+            android:layout_gravity="center"
+            android:src="@drawable/logo" />
 
-   </LinearLayout>
+        <ImageButton
+            android:id="@+id/editadd"
+            android:layout_gravity="end|bottom"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:background="@drawable/border_radius"
+            android:src="@drawable/edit"
+            android:pointerIcon="arrow"
+            app:tint="@color/myTheme"
+            style="@style/searchBg"/>
 
-</FrameLayout>
+    </FrameLayout>
+
+    <TextView
+        android:id="@+id/name"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Your Name"
+        android:fontFamily="@font/poppins_semibold"
+        android:textSize="24sp"
+        android:textAlignment="center"
+        android:layout_marginTop="5dp"
+        style="@style/textColor"/>
+
+    <TextView
+        android:id="@+id/email"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:fontFamily="@font/poppins_semibold"
+        android:text="ecom@gmail.com"
+        android:textAlignment="center"
+        android:textSize="14sp"
+        style="@style/textColor"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="5dp"
+        android:background="@drawable/line"
+        android:layout_marginHorizontal="20dp"
+        android:layout_marginVertical="20dp"
+        style="@style/strokeBgColor"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center"
+        android:background="@drawable/search_bg"
+        android:backgroundTint="@color/transparent"
+        android:layout_marginHorizontal="20dp"
+        android:layout_marginBottom="10dp"
+        android:paddingVertical="15dp"
+        android:paddingHorizontal="10dp"
+        >
+
+        <ImageView
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:src="@drawable/user_outlined"
+            style="@style/iconColor"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_marginHorizontal="10dp"
+            android:text="Edit Profile"
+            android:textAlignment="textStart"
+            android:fontFamily="@font/poppins_semibold"
+            android:textSize="18sp"
+            style="@style/textColor"/>
+
+        <ImageView
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:src="@drawable/arrow_right"
+            style="@style/iconColor"/>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/addressBtn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center"
+        android:background="@drawable/search_bg"
+        android:backgroundTint="@color/transparent"
+        android:layout_marginHorizontal="20dp"
+        android:layout_marginBottom="10dp"
+        android:paddingVertical="15dp"
+        android:paddingHorizontal="10dp"
+        >
+
+        <ImageView
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:src="@drawable/location_outline"
+            style="@style/iconColor"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_marginHorizontal="10dp"
+            android:text="Address"
+            android:textAlignment="textStart"
+            android:fontFamily="@font/poppins_semibold"
+            android:textSize="18sp"
+            android:textColor="@color/textcolor"/>
+
+        <ImageView
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:src="@drawable/arrow_right"
+            style="@style/Animation.Design.BottomSheetDialog"/>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/logoutBtn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center"
+        android:background="@drawable/search_bg"
+        android:backgroundTint="@color/transparent"
+        android:layout_marginHorizontal="20dp"
+        android:layout_marginBottom="10dp"
+        android:paddingVertical="15dp"
+        android:paddingHorizontal="10dp">
+
+        <ImageView
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:src="@drawable/logout"
+            app:tint="#F75555" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_marginHorizontal="10dp"
+            android:text="Logout"
+            android:textAlignment="textStart"
+            android:textColor="#F75555"
+            android:fontFamily="@font/poppins_semibold"
+            android:textSize="18sp"/>
+
+    </LinearLayout>
+
+</LinearLayout>
