--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -41,4 +41,20 @@
         <item name="android:layout_height">50dp</item>
         <item name="android:gravity">center</item>
     </style>
+    <style name="iconColor">
+        <item name="android:tint">#212121</item>
+    </style>
+    <style name="textColor">
+        <item name="android:textColor">#212121</item>
+    </style>
+    <style name="strokeBgColor">
+        <item name="android:backgroundTint">#EEEEEE</item>
+    </style>
+    <style name="searchBg">
+        <item name="android:backgroundTint">#EDEDED</item>
+    </style>
+
+    <style name="screenBgTwo">
+        <item name="android:background">#FCFCFC</item>
+    </style>
 </resources>
