--- a/app/src/main/res/menu/bottom_menu.xml
+++ b/app/src/main/res/menu/bottom_menu.xml
@@ -3,24 +3,23 @@
 
     <item android:id="@+id/home"
         android:title="home"
-        android:icon="@drawable/home"
-        />
-
-    <item android:id="@+id/cart"
-        android:title="cart"
-        android:icon="@drawable/cart"
-        />
-    <item android:id="@+id/favorite"
-        android:title="favorite"
-        android:icon="@drawable/favorite"
-        />
-    <item android:id="@+id/account"
-        android:title="account"
-        android:icon="@drawable/user"
+        android:icon="@drawable/house_solid"
         />
     <item android:id="@+id/orders"
         android:title="orders"
-        android:icon="@drawable/shopping_bag"
+        android:icon="@drawable/bag_shopping_solid"
+        />
+    <item android:id="@+id/cart"
+        android:title="cart"
+        android:icon="@drawable/cart_shopping"
+        />
+    <item android:id="@+id/favorite"
+        android:title="favorite"
+        android:icon="@drawable/heart_solid"
+        />
+    <item android:id="@+id/account"
+        android:title="account"
+        android:icon="@drawable/user_solid"
         />
 
 </menu>
