--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -67,4 +67,12 @@
     <style name="notFoundImage">
         <item name="android:src">@drawable/not_found_frame</item>
     </style>
+    <style name="tabText">
+        <item name="android:fontFamily">@font/poppins_bold</item>
+        <item name="android:textSize">18sp</item>
+        <item name="android:textColor">#9E9E9E</item>
+        <item name="textAllCaps">false</item>
+        <item name="android:letterSpacing">0.0</item>
+    </style>
+
 </resources>
